--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -8752,6 +8752,162 @@ key "Ahn2005"
  colaborativos.
 \end_layout
 
+\begin_layout Section
+Servicios web de 
+\emph on
+nueva generación 
+\emph default
+(en la web 2.0)
+\end_layout
+
+\begin_layout Standard
+Un 
+\emph on
+servicio web 
+\emph default
+está definido por el consorcio de la 
+\emph on
+world wide web
+\emph default
+ (w3) como
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://www.w3.org/TR/wsa-reqs/#id2604831
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
+Un sistema de software identificado por una URI [identificador uniforme
+ de recursos], cuyas interfaces públicas y referencias son definidas y descritas
+ utilizando XML [lenguaje de marcas extensible].
+ Su definición puede ser descubierta por otros sistemas de software.
+ Estos sistemas pueden entonces interactuar con el servicio web de la manera
+ prescrita por su definición utilizando mensajes en XML transmitidos por
+ protocolos de internet 
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Esta definición implica que, dada una definición XML arbitraria de un servicio,
+ los desarrolladores de aplicaciones podían formar solicitudes conformadas
+ a ella y obtener recursos provistos por el mismo.
+ Una manera muy popular de implementar servicios web siguiendo este concepto
+ es el protocolo 
+\emph on
+SOAP
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+Definido en detalle por el w3 en 
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://www.w3.org/TR/soap12-part0/
+\end_layout
+
+\end_inset
+
+ 
+\end_layout
+
+\end_inset
+
+ 
+\emph default
+(Simple Object Access Protocol, o Protocolo Simple de Acceso a Objetos).
+ En este protocolo, las operaciones sobre los objetos provistos por el servicio
+ son definidas en el XML que define el servicio, llevando a implementaciones
+ complicadas para desarrolladores sin experiencia.
+ En el caso de un servicio utilizando el protocolo SOAP, entonces, si se
+ quisiera, por ejemplo, actualizar una lista de productos, una llamada típica
+ de un servicio web sería una solicitud POST del protocolo HTTP, con un
+ cuerpo XML con los datos requeridos por el servicio a una url con el nombre
+ del método: 
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://example.com/addResource
+\end_layout
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Standard
+El estilo de arquitectura REST (de 
+\emph on
+Representational-State Transfer, 
+\emph default
+Transferencia de Estado Representacional), definida por 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Fielding2000"
+
+\end_inset
+
+, hace uso de las operaciones básicas del protocolo HTTP (PUT, POST, GET
+ y DELETE) y las URI de recursos del servicio para actuar sobre los objetos,
+ así, el ejemplo anterior sería una solicitud POST a una URI como 
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://example.com/resources/
+\end_layout
+
+\end_inset
+
+.
+ El uso de la arquitectura REST en los servicios web, entonces, elimina
+ la necesidad de definiciones arbitrarias de acciones y recursos, y descansa
+ sobre las acciones, tipos de datos y definiciones intrínsecas del protocolo.
+ Los servicios web que utilizan los principios de la arquitectura REST se
+ conocen como 
+\begin_inset Quotes eld
+\end_inset
+
+servicios RESTful
+\begin_inset Quotes erd
+\end_inset
+
+, aunque los principios de llamadas a la arquitectura son importantes en...
+\end_layout
+
+\begin_layout Standard
+[TODO: explicar principios de REST, explicar servicios SOA+REST, explicar
+ JSON y JSONP]
+\end_layout
+
 \begin_layout Chapter
 Análisis y Diseño
 \end_layout
@@ -13187,7 +13343,7 @@ end{algorithm}
 \end_layout
 
 \begin_layout Chapter
-.Conclusión
+Conclusión
 \end_layout
 
 \begin_layout Standard
