--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -8894,7 +8894,7 @@ world wide web
 \emph default
  (w3) como
 \begin_inset Foot
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \begin_inset Flex URL
@@ -8902,7 +8902,9 @@ status open
 
 \begin_layout Plain Layout
 
-http://www.w3.org/TR/wsa-reqs/#id2604831
+http://www.w3.org/TR/wsa-reqs/
+\backslash
+#id2604831
 \end_layout
 
 \end_inset
@@ -9156,7 +9158,8 @@ Mensajes
 \begin_inset space ~
 \end_inset
 
-auto-descriptivos: cada mensaje contiene en sí suficiente
+auto-descriptivos: cada mensaje contiene en sí suficiente información para
+ describir cómo procesarlo.
 \end_layout
 
 \end_deeper
@@ -9291,7 +9294,7 @@ status collapsed
 \begin_layout Plain Layout
 
 \begin_inset Flex URL
-status collapsed
+status open
 
 \begin_layout Plain Layout
 
@@ -9336,11 +9339,13 @@ http://bob.pythonmac.org/archives/2005/12/05/remote-json-jsonp/
 
  y también utilizada en la API para desarrolladores de yahoo (
 \begin_inset Flex URL
-status collapsed
+status open
 
 \begin_layout Plain Layout
 
-http://developer.yahoo.com/common/json.html#callbackparam
+http://developer.yahoo.com/common/json.html
+\backslash
+#callbackparam
 \end_layout
 
 \end_inset
@@ -12513,163 +12518,6 @@ haystack
  colección documental bilingüe.
 \end_layout
 
-\begin_layout Subsection
-El sub-componente de búsqueda automática
-\end_layout
-
-\begin_layout Standard
-Aunque la búsqueda directa se permite en el sistema, un componente fundamental
- es uno que, dado el contexto inmediato de la sesión, pueda determinar qué
- subconjunto de términos se considerarán para construir una consulta que
- se hará al componente de búsqueda y para agregación al perfil.
- Siguiendo el camino marcado por 
-\begin_inset CommandInset citation
-LatexCommand citet
-key "Gruzd2006"
-
-\end_inset
-
-, se optó por un componente que extraiga términos clave del texto.
- Se implementó un método que recibe el susodicho texto, un título opcional
- y el lenguaje en el que está escrito; éste método utiliza una librería
- del lenguaje de programación python para extraer palabras clave
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-la librería en cuestión es topia.termextract: 
-\begin_inset Flex URL
-status collapsed
-
-\begin_layout Plain Layout
-
-http://pypi.python.org/pypi/topia.termextract/
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
- para documentos en inglés, y, para los demás lenguajes, (y opcionalmente
- para los que se pueden analizar con la librería previamente mencionada)
- se utiliza, por elección de quien utilice el sub-componente, uno de los
- siguientes servicios web:
-\end_layout
-
-\begin_layout Enumerate
-Alchemy
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-\begin_inset Flex URL
-status collapsed
-
-\begin_layout Plain Layout
-
-www.alchemyapi.com/api/keyword/textc.html
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-,
-\end_layout
-
-\begin_layout Enumerate
-Yahoo term extraction
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-\begin_inset Flex URL
-status collapsed
-
-\begin_layout Plain Layout
-
-http://developer.yahoo.com/search/content/V1/termExtraction.html
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Enumerate
-Wordsfinder
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-\begin_inset Flex URL
-status open
-
-\begin_layout Plain Layout
-
-wordsfinder.com/api_Keyword_Extractor.php
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-.
- 
-\end_layout
-
-\begin_layout Enumerate
-Tagthe 
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-\begin_inset Flex URL
-status collapsed
-
-\begin_layout Plain Layout
-
-http://tagthe.net/fordevelopers
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-El sub-componente está abierto a la inclusión de más servicios web o librerías
- del lado del servidor a utilizar.
-\end_layout
-
-\begin_layout Standard
-En la presente implementación, para construir una consulta se utiliza el
- método de extracción de términos clave previamente mencionado para obtener
- una lista que luego se une en una sola frase.
- Es importante notar que el estado presente del proyecto no es factible
- para un ambiente de producción, ya que los servicios web tienen límites
- de uso y/o pueden bloquear las solicitudes si se excede un umbral.
-\end_layout
-
 \begin_layout Section
 Implementación del componente de perfilado
 \end_layout
@@ -12791,17 +12639,6 @@ xappy
 Una vez creado el índice de categorías, se implementó una función que recibe
  una consulta y devuelve las diez categorías a las cuales tiene mayor probabilid
 ad de pertenecer.
-\end_layout
-
-\begin_layout Subsubsection
-Notas sobre rendimiento
-\end_layout
-
-\begin_layout Standard
-Para procesar los 493 documentos de la colección de prueba se requirieron
- once segundos-procesador, siendo cuellos de botella las consultas hechas
- a la base de datos para obtener el texto de los documentos de cada categoría.
- 
 \end_layout
 
 \begin_layout Subsection
@@ -13493,6 +13330,228 @@ Implementación del servicio
 \end_layout
 
 \begin_layout Subsection
+Interfaz de programación de aplicaciones
+\end_layout
+
+\begin_layout Standard
+Para la implementación de la API se decidió seguir la tendencia actual e
+ implementar principios del estilo de arquitectura REST.
+ A continuación, se detalla cómo los principios de esta arquitectura se
+ ven cumplidos y las decisiones de ingeniería que llevaron a implementar
+ un servicio web apegado a REST.
+\end_layout
+
+\begin_layout Description
+Distinción
+\begin_inset space ~
+\end_inset
+
+cliente-servidor: Característica fundamental de cualquier servicio web,
+ el solo hecho de implementar éste como una API permite que tanto el cliente
+ como el servidor puedan evolucionar independientemente, mientras cumplan
+ con el protocolo HTTP y puedan interpretar lo que uno u otro transmite
+ en las comunicaciones.
+\end_layout
+
+\begin_layout Description
+Sin
+\begin_inset space ~
+\end_inset
+
+estado: Se decidió que el implementador tendrá que enviar en cada solicitud
+ el token único asignado a la aplicación así como el identificador del usuario
+ final; aunque esto podría haberse resuelto con una llamada a alguna función
+ de inicialización de sesión en la que estos datos se determinasen y guardasen
+ en una sesión, se hubiera dependido de almacenamiento entre transiciones
+ de estado en el servidor, obstaculizando la escalabilidad y la distribución
+ de las tareas.
+ Por ello, se prefirió hacer búsquedas en la base de datos cada vez que
+ se reciba una solicitud, teniendo en cuenta claro, facilidades del administrado
+r de base de datos como el sistema de caché y el uso de índices para reducir
+ la latencia.
+\end_layout
+
+\begin_layout Description
+Caché: puesto que las solicitudes se valen de mecanismos propios de HTTP,
+ la facilidad de caché
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://www.w3.org/Protocols/rfc2616/rfc2616-sec13.html
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+ del protocolo puede entrar en acción donde sea permitido por el mismo.
+ 
+\end_layout
+
+\begin_layout Description
+Identificación
+\begin_inset space ~
+\end_inset
+
+de
+\begin_inset space ~
+\end_inset
+
+recursos: mediante solicitudes a las URLs de la API, los implementadores
+ reciben respuestas en hipermedia con los encabezados correspondientes ({Content
+-Type:
+\begin_inset Quotes eld
+\end_inset
+
+application/json
+\begin_inset Quotes erd
+\end_inset
+
+} para los datos relativos a recomendaciones y {Content-Type:
+\begin_inset Quotes eld
+\end_inset
+
+text/html
+\begin_inset Quotes erd
+\end_inset
+
+} para el widget opcional.
+\end_layout
+
+\begin_layout Description
+Manipulación
+\begin_inset space ~
+\end_inset
+
+de
+\begin_inset space ~
+\end_inset
+
+recursos
+\begin_inset space ~
+\end_inset
+
+mediante
+\begin_inset space ~
+\end_inset
+
+representaciones: el implementador hace solicitudes utilizando los métodos
+ GET o POST y puede leer los recursos recomendados, devueltos en formato
+ JSON o modificar el perfil de un usuario mediante una llamada a la URL
+ correspondiente.
+ En el caso de la lectura de recursos recomendados, se requiere una solicitud
+ via GET.
+ En el caso de la actualización de un perfil, se requiere una solicitud
+ via POST con autenticación http básica
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://www.w3.org/Protocols/HTTP/1.0/spec.html
+\backslash
+#AA
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+.
+ Cabe notar que se ha decidido prescindir del mecanismo de autenticación
+ provisto por el framework django, ya que este depende de sesiones de usuario,
+ [TODO: decidirme lo de basic http auth] 
+\end_layout
+
+\begin_layout Description
+Hipermedia
+\begin_inset space ~
+\end_inset
+
+como
+\begin_inset space ~
+\end_inset
+
+motor
+\begin_inset space ~
+\end_inset
+
+del
+\begin_inset space ~
+\end_inset
+
+estado
+\begin_inset space ~
+\end_inset
+
+representacional: Al devolver recomendaciones, se incluye el URL de las
+ mismas, para que el usuario final pueda acceder a ellas.
+\end_layout
+
+\begin_layout Description
+Mensajes
+\begin_inset space ~
+\end_inset
+
+auto-descriptivos: otra característica fundamental de las APIs, los mensajes
+ de solicitud contienen todos los datos necesarios para que el servidor
+ los procese, asimismo, las respuestas del servidor contienen los encabezados
+ y códigos de estado estándar de HTTP para indicar cómo debería tratarlos
+ el cliente.
+\end_layout
+
+\begin_layout Description
+Sistema
+\begin_inset space ~
+\end_inset
+
+en
+\begin_inset space ~
+\end_inset
+
+capas: inherente al 
+\emph on
+framework 
+\emph default
+elegido (django), separa el almacenamiento y el procesamiento de las solicitudes
+, de manera que todos los componentes del sistema del lado del servidor
+ tienen el acoplamiento más bajo posible.
+\end_layout
+
+\begin_layout Description
+Code-on-demand: el 
+\emph on
+widget
+\emph default
+ opcional es provisto por el servidor como un script de javascript al cliente,
+ de manera que se pueda expandir la funcionalidad.
+\end_layout
+
+\begin_layout Description
+
+\end_layout
+
+\begin_layout Standard
+
+\end_layout
+
+\begin_layout Subsection
 Detección de cambios en el contexto local
 \end_layout
 
@@ -13683,6 +13742,163 @@ end{algorithm}
 \end_inset
 
 
+\end_layout
+
+\begin_layout Subsection
+Detección de términos clave
+\end_layout
+
+\begin_layout Standard
+Aunque la búsqueda directa se permite en el sistema, un componente fundamental
+ es uno que, dado el contexto inmediato de la sesión, pueda determinar qué
+ subconjunto de términos se considerarán para construir una consulta que
+ se hará al componente de búsqueda y para agregación al perfil.
+ Siguiendo el camino marcado por 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Gruzd2006"
+
+\end_inset
+
+, se optó por un componente que extraiga términos clave del texto.
+ Se implementó un método que recibe el susodicho texto, un título opcional
+ y el lenguaje en el que está escrito; éste método utiliza una librería
+ del lenguaje de programación python para extraer palabras clave
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+la librería en cuestión es topia.termextract: 
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://pypi.python.org/pypi/topia.termextract/
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+ para documentos en inglés, y, para los demás lenguajes, (y opcionalmente
+ para los que se pueden analizar con la librería previamente mencionada)
+ se utiliza, por elección de quien utilice el sub-componente, uno de los
+ siguientes servicios web:
+\end_layout
+
+\begin_layout Enumerate
+Alchemy
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+www.alchemyapi.com/api/keyword/textc.html
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+,
+\end_layout
+
+\begin_layout Enumerate
+Yahoo term extraction
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://developer.yahoo.com/search/content/V1/termExtraction.html
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Enumerate
+Wordsfinder
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status open
+
+\begin_layout Plain Layout
+
+wordsfinder.com/api_Keyword_Extractor.php
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Enumerate
+Tagthe 
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://tagthe.net/fordevelopers
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+El sub-componente está abierto a la inclusión de más servicios web o librerías
+ del lado del servidor a utilizar.
+\end_layout
+
+\begin_layout Standard
+En la presente implementación, para construir una consulta se utiliza el
+ método de extracción de términos clave previamente mencionado para obtener
+ una lista que luego se une en una sola frase.
+ Es importante notar que el estado presente del proyecto no es factible
+ para un ambiente de producción, ya que los servicios web tienen límites
+ de uso y/o pueden bloquear las solicitudes si se excede un umbral.
 \end_layout
 
 \begin_layout Subsection
